---- Changes since 1.140 ----
Added a button for mounting a logical volume.
---- Changes since 1.150 ----
Added support for LVM2, as used in the new 2.6 Linux kernel.
---- Changes since 1.270 ----
When viewing a physical volume, the space used by each logical volume on it is displayed. Similarly, when viewing a logical volume, the amount of space contributed by each physical volume is displayed.
---- Changes since 1.290 ----
Fixed display of space used on each physical volume by a logical volume for LVM version 2.
---- Changes since 1.390 ----
Re-designed the module's main page to use tabs, and added an option to show volumes and groups in tables (with more information) instead of using icons.
Converted all user interface code to use the new Webmin UI library.
Fixed the command used to move data to another physical volume under LVM 2.
---- Changes since 1.410 ----
The percentage of a snapshot's blocks used is now shown on the Edit Snapshot page.
---- Changes since 1.440 ----
Filesystem space used is show on the logical volume list, and the field for a new volume's size is more user-friendly.